fix sonar: Math.clamp